[gd_scene format=3 uid="uid://c8nxwkkwa7k3q"]

[ext_resource type="Script" uid="uid://u4b20jqcak3a" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]

[sub_resource type="LabelSettings" id="LabelSettings_sl1te"]
font_size = 128

[node name="MainMenu" type="Control" unique_id=1029575999]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="Background" type="ColorRect" parent="." unique_id=402669066]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.2509804)

[node name="TitleLabel" type="Label" parent="." unique_id=938892341]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = -181.5
offset_top = -625.0
offset_right = 181.5
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 0
text = "Game"
label_settings = SubResource("LabelSettings_sl1te")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=468736880]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="VBoxContainer" unique_id=801427526]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LargeButton"
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer" unique_id=923666293]
layout_mode = 2
theme_type_variation = &"LargeButton"
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=1230787372]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LargeButton"
text = "Quit to Desktop"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
